deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newdotnet-d-app-deployment
  namespace: abcd
  labels:
    app: newdotnet-d-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newdotnet-d-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: newdotnet-d-app
    spec:
      containers:
      - name: newdotnet-d-app
        image: hello12345.azurecr.io/newdotnet-d-app:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 5000
          initialDelaySeconds: 8
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5
