test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
  labels:
    app: docker
  namespace: deeksha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker
  template:
    metadata:
      labels:
        app: docker
    spec:
      containers:
      - name: docker123
        image: 
        ports:
        - containerPort: 80
