service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: deeksha
spec:
  selector:
    app: dotnetdemo
  type: Loadbalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
