networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: newdotnet-d-app-network-policy
  namespace: abcd
spec:
  podSelector:
    matchLabels:
      app: newdotnet-d-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: newdotnet-d-app
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: newdotnet-d-app
